[package]
name = "async-pipeline"
version = "0.0.2"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Easy way to pipeline sync and async functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = { version = "1.5", features = ["full"] }
async-trait = "0.1.57"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"