[package]
name = "async_pipeline_for_lucas"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Easy way to pipeline sync and async functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = { version = "1.21.0", features = ["full"] }
async-trait = "0.1.57"
anyhow = "1.0.68"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"